--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/pubsub": "^6.1.22",
     "@aws-amplify/ui-react": "^6.3.1",
     "aws-amplify": "^6.6.0",
     "react": "^18.3.1",
