--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/pubsub": "^6.1.22",
     "@aws-amplify/ui-react": "^6.3.1",
     "aws-amplify": "^6.6.0",
+    "aws-iot-device-sdk-v2": "^1.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
